[package]
name = "zkp-ecdsa-rs"
version = "0.1.0"
edition = "2021"
authors = ["Manuel B. Santos <manuel.batalha.santos@gmail.com>"]
description = "Rust implementation of zkattest proof system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#num-bigint = "0.2"
#secp256k1 = "0.7"
#openssl = { version = "0.10", features = ["ec"] }
openssl = "0.10.45"


#[lib]
#name = "zkattest_rs"
#crate-type = ["cdylib"]
